Fix: Header justify not stretching to fill div
sect1 was a child of header, preventing space between from functioning
properly. This was rectified to achieve desired style by separating
header logo from links.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 .header {
-    background-color: #1F2937
+    background-color: #1F2937;
+    display: flex;
+    justify-content: space-between;
+}
+
+.hlist {
+    display: flex;
+    list-style: none;
 }
